<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/BaseToolbarStyle"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

                <ImageView
                    android:padding="15dp"
                    android:src="@mipmap/ic_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_alarm_search"/>

                <TextView
                    android:drawablePadding="5dp"
                    android:id="@+id/tv_alarm_title"
                    android:drawableRight="@mipmap/ic_pull"
                    android:drawableEnd="@mipmap/ic_pull"
                    style="@style/BaseToolbarTitleStyle"
                    android:text="@string/default_text"/>


        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_alarm_time"
                    android:drawableEnd="@mipmap/ic_pull_gray"
                    android:drawableRight="@mipmap/ic_pull_gray"
                    android:padding="15dp"
                    style="@style/NormalGrayTextSizeStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:text="@string/time"
                    android:layout_weight="1"/>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/vertical_parting_line"/>

                <TextView
                    android:drawableEnd="@mipmap/ic_pull_gray"
                    android:drawableRight="@mipmap/ic_pull_gray"
                    android:padding="15dp"
                    style="@style/NormalGrayTextSizeStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_weight="1"
                    android:id="@+id/tv_alarm_type"
                    android:text="@string/type"/>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/vertical_parting_line"/>

                <TextView
                    android:drawableEnd="@mipmap/ic_pull_gray"
                    android:drawableRight="@mipmap/ic_pull_gray"
                    android:padding="15dp"
                    style="@style/NormalGrayTextSizeStyle"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_alarm_marked"
                    android:text="@string/alarm_marked"
                    android:layout_weight="1"/>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/vertical_parting_line"/>

                <TextView
                    android:drawableEnd="@mipmap/ic_pull_gray"
                    android:drawableRight="@mipmap/ic_pull_gray"
                    android:padding="15dp"
                    style="@style/NormalGrayTextSizeStyle"
                    android:layout_width="0dip"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:id="@+id/tv_alarm_device"
                    android:text="@string/all_device"/>
        </LinearLayout>

        <View
            style="@style/horizontal_parting_line"/>

        <android.support.v7.widget.RecyclerView
            android:background="@color/bg_color"
            android:id="@+id/rv_alarm_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="LinearLayoutManager" />


</LinearLayout>