<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <View
        android:id="@+id/v_divide"
        android:layout_width="match_parent"
        android:layout_height="4dp"/>

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_status"
                style="@style/SmallWhiteTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_rounded_rectangle_green"
                android:text="@string/default_text"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/MiddleTextSizeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_status"
                android:layout_toStartOf="@id/tv_status"
                android:singleLine="true"
                android:text="@string/default_text"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/SmallBlackTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/storage_battery_voltage_colon"/>

            <TextView
                android:id="@+id/tv_storage_battery_voltage"
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/default_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/SmallBlackTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_power_generation_colon"/>

            <TextView
                android:id="@+id/tv_current_power_generation"
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/default_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/SmallBlackTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_load_power_colon"/>

            <TextView
                android:id="@+id/tv_current_load_power"
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/default_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/SmallBlackTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_station_address_colon"/>

            <TextView
                android:id="@+id/tv_power_station_address"
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/default_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

