<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_real_time"
            android:paddingLeft="30px"
            >
            <RadioButton
                android:id="@+id/rb_real_time_1"
                android:background="@drawable/radiobutton_left_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/all"/>
            <RadioButton
                android:id="@+id/rb_real_time_2"
                android:button="@null"
                android:background="@drawable/radiobutton_center_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"/>
            <RadioButton
                android:id="@+id/rb_real_time_3"
                android:button="@null"
                android:background="@drawable/radiobutton_right_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"/>
        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/tv_date_real_time"
            android:text="@string/all"
            android:drawableRight="@mipmap/ic_pull_down"
            />
    </LinearLayout>
    <View
        style="@style/horizontal_parting_line"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/real_time_curve_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <android.support.design.widget.TabLayout
        android:layout_gravity="center_horizontal"
        android:id="@+id/real_time_curve_tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabBackground="@null"
        app:tabGravity="fill"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"/>

</LinearLayout>